[gd_scene load_steps=4 format=3 uid="uid://dxa7h3rrmh2vm"]

[ext_resource type="Script" uid="uid://c3wtsirlcer4t" path="res://scenes/main_menu.gd" id="1_xgws1"]
[ext_resource type="AudioStream" uid="uid://cv6rr8dq5wne7" path="res://audio/ball-tap.wav" id="2_ekxnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xjm06"]
bg_color = Color(0.392411, 0.681709, 0.376596, 1)

[node name="main menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xgws1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 492.0
offset_bottom = 301.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xjm06")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 175.0
offset_top = 81.0
offset_right = 303.0
offset_bottom = 217.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Continue Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue Game"

[node name="New game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="select_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ekxnf")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue Game" to="." method="_on_continue_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/New game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
